[gd_scene load_steps=10 format=2]

[ext_resource path="res://Acessories/Weapons_sprites/Pipe.png" type="Texture" id=1]
[ext_resource path="res://Acessories/Weapon_bullet/Grenade/Grenade.gd" type="Script" id=2]
[ext_resource path="res://Others/explosion.tscn" type="PackedScene" id=3]

[sub_resource type="Shader" id=1]
code = "shader_type canvas_item;

uniform float white_progress : hint_range(0,1) = 0;

vec3 interpolate_vec3(vec3 start, vec3 end, float delta){
    return start + (end - start) * delta;
}

void fragment(){
    vec4 origin = texture(TEXTURE, UV);
    COLOR.rgb = interpolate_vec3(origin.rgb, vec3(1,1,1), white_progress);
    COLOR.a = origin.a;
}"

[sub_resource type="ShaderMaterial" id=2]
shader = SubResource( 1 )
shader_param/white_progress = 0.0

[sub_resource type="CircleShape2D" id=3]
radius = 14.6251

[sub_resource type="Animation" id=4]
resource_name = "Rapid"
length = 0.3
loop = true
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:material:shader_param/white_progress")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.15, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ 0.0, 0.75, 0.0 ]
}

[sub_resource type="Animation" id=5]
length = 0.5
loop = true
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:material:shader_param/white_progress")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.25 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.0, 0.75 ]
}

[sub_resource type="CircleShape2D" id=6]
radius = 76.9378

[node name="Grenade" type="KinematicBody2D"]
collision_layer = 8
script = ExtResource( 2 )
Speed = 100

[node name="Sprite" type="Sprite" parent="."]
material = SubResource( 2 )
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 3 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "Start"
anims/Rapid = SubResource( 4 )
anims/Start = SubResource( 5 )

[node name="destruction_area" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="destruction_area"]
shape = SubResource( 6 )
disabled = true

[node name="Timer" type="Timer" parent="."]

[node name="Explosion" parent="." instance=ExtResource( 3 )]

[connection signal="body_entered" from="destruction_area" to="." method="_on_destruction_area_body_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
